LU-5859 llog: do not cleanup orphans in remote catalogs

when a catalog is being processed by the client, just ignore
empty llogs, do not try to clean them as the client has no
direct access to the storage.

Signed-off-by: Alex Zhuravlev <alexey.zhuravlev@intel.com>
Change-Id: Ida933d44475fd392fe3db96bcdd4a05076b63881
Reviewed-on: http://review.whamcloud.com/13414
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: wangdi <di.wang@intel.com>
Reviewed-by: Mike Pershin <mike.pershin@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>